samples/_failures_safe/1761254470_cf3256_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f2e98fc.c: In function ‘print_stats’:
./samples/SAFE/__tmp_4f2e98fc.c:136:12: error: missing terminating " character
  136 |     printf("Info: %
      |            ^~~~~~~~
./samples/SAFE/__tmp_4f2e98fc.c:136:5: error: expected expression at end of input
  136 |     printf("Info: %
      |     ^~~~~~
./samples/SAFE/__tmp_4f2e98fc.c:136:5: error: expected declaration or statement at end of input
